# smart-timetable-scheduler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routes/: export.py  generate.py
examples/: exam_schedule.json  small_college.json
frontend/: package-lock.json
frontend/src/: App.jsx  api.js  sampleData.js
frontend/src/components/: InputForm.jsx  StatsPanel.jsx  TeacherView.jsx  TimetableGrid.jsx
scheduler/: __init__.py  __main__.py  annealing.py  backtracking.py  constraints.py  display.py  exam.py  fitness.py  genetic.py  graph.py  models.py  parser.py
tests/: test_annealing.py  test_constraints.py  test_exam.py  test_fitness.py  test_genetic.py  test_graph.py  test_models.py  test_solver.py
