[project]
name = "smart-timetable-scheduler"
version = "0.1.0"
description = "NP-Hard timetable scheduling using graph coloring, backtracking with MRV heuristic"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "tabulate>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0",
]

[project.scripts]
timetable = "scheduler.__main__:main"
